--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "duncan3dc/sessions": "^1.2"
+        "php": "^7.4 || ^8.0",
+        "guzzlehttp/guzzle": "^7.2.1 || ^8.0.1",
+        "duncan3dc/sessions": "^1.2 || ^2.1"
     },
     "autoload": {
         "psr-4": {
